# GSW-Haskell

./: GSW.cabal  README.md  patch.gsw  stack.yaml
Oceanogr/: GSW.hs  GSWtools.chs
Test/: SimpleDynamicHeightTest.hs
