name:                GSW
version:             0.2.0.0
-- synopsis:            
-- description:         
license:             OtherLicense
license-file:        LICENSE
author:              kkats
maintainer:          k.katsumata@jamstec.go.jp
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Oceanogr.GSW,
                       Oceanogr.GSWtools
  other-extensions:    ForeignFunctionInterface, TypeFamilies, ScopedTypeVariables
  build-tools:         c2hs
  include-dirs:        $(LIB)/gsw_c_v3.05/
  build-depends:       base,
                       ieee754,
                       vector
  default-language:    Haskell2010

Test-Suite simpleTool
  type: exitcode-stdio-1.0
  main-is: SimpleToolTest.hs
  hs-source-dirs: Test
  build-depends: base,
                 GSW
  default-language: Haskell2010
  extra-lib-dirs:      $(LIB)/gsw_c_v3.05/
  extra-libraries:     gswteos-10
--  ghc-options: -optl-Wl,-rpath,$(LIB)/gsw_c_v3.05/

Test-Suite simpleDH
  type: exitcode-stdio-1.0
  main-is: SimpleDynamicHeightTest.hs
  hs-source-dirs: Test
  build-depends: base,
                 GSW,
                 vector
  default-language: Haskell2010
  extra-lib-dirs:      $(LIB)/gsw_c_v3.05/
  extra-libraries:     gswteos-10
--  ghc-options: -optl-Wl,-rpath,$(LIB)/gsw_c_v3.05/
